[package]
name = "const-murmur3"
authors = "josiah.beverton@gmail.com"
version = "0.2.0"
edition = "2021"
description = "A const fn implementation of the murmur3 hashing algorithm"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Reboare/const-murmur3"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
